Fix source versions.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -640,7 +640,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   console_bridge:
     release:
@@ -664,7 +664,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   demo_nodes_py:
     release:
@@ -676,7 +676,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   depth_to_pointcloud:
     release:
@@ -724,7 +724,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   dummy_robot_bringup:
     release:
@@ -736,7 +736,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   dummy_sensors:
     release:
@@ -748,7 +748,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   example_interfaces:
     release:
@@ -976,7 +976,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   intra_process_demo:
     release:
@@ -988,7 +988,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   joy:
     release:
@@ -1048,7 +1048,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   lifecycle_msgs:
     release:
@@ -1144,7 +1144,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   pendulum_msgs:
     release:
@@ -1156,7 +1156,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   poco_vendor:
     release:
@@ -1634,7 +1634,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/common_interfaces.git
-      version: release-beta2
+      version: master
     status: maintained
   shape_msgs:
     release:
@@ -1646,7 +1646,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/common_interfaces.git
-      version: release-beta2
+      version: master
     status: maintained
   sros2:
     release:
@@ -1862,7 +1862,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: release-beta2
+      version: master
     status: maintained
   trajectory_msgs:
     release:
