Update package name.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -678,7 +678,7 @@ repositories:
       url: https://github.com/ros2/demos.git
       version: master
     status: maintained
-  depth_to_pointcloud:
+  depthimage_to_pointcloud:
     release:
       tags:
         release: release/r2b3/{package}/{version}
