Add new demo_nodes_cpp_native package.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -666,6 +666,18 @@ repositories:
       url: https://github.com/ros2/demos.git
       version: master
     status: maintained
+  demo_nodes_cpp_native:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/demos-release.git
+      version: 0.0.2-2
+    source:
+      type: git
+      url: https://github.com/ros2/demos.git
+      version: master
+    status: maintained
   demo_nodes_py:
     release:
       tags:
