Add missed examples_rclpy_executors.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -846,6 +846,18 @@ repositories:
       url: https://github.com/ros2/examples.git
       version: master
     status: maintained
+  examples_rclpy_executors:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/examples-release.git
+      version: 0.0.2-3
+    source:
+      type: git
+      url: https://github.com/ros2/examples.git
+      version: master
+    status: maintained
   examples_rclpy_minimal_client:
     release:
       tags:
