--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -160,6 +160,10 @@ repositories:
       version: indigo-devel
     status: maintained
   airbus_coop:
+    doc:
+      type: git
+      url: https://github.com/ipa320/airbus_coop.git
+      version: master
     release:
       packages:
       - airbus_cobot_gui
@@ -176,7 +180,12 @@ repositories:
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ipa320/airbus_coop-release.git
-      version: 0.0.3-0
+      version: 0.0.4-0
+    source:
+      type: git
+      url: https://github.com/ipa320/airbus_coop.git
+      version: master
+    status: maintained
   alfred_bot:
     doc:
       type: git
