pocketsphinx: 1.0.1-1 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5790,6 +5790,22 @@ repositories:
       url: https://github.com/ros/pluginlib.git
       version: kinetic-devel
     status: maintained
+  pocketsphinx:
+    doc:
+      type: git
+      url: https://github.com/Pankaj-Baranwal/pocketsphinx.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/Pankaj-Baranwal/pocketsphinx-release.git
+      version: 1.0.1-1
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/Pankaj-Baranwal/pocketsphinx.git
+      version: kinetic-devel
+    status: maintained
   pointcloud_to_laserscan:
     doc:
       type: git
