Set first wave of package updates.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -48,11 +48,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_auto:
     release:
@@ -60,11 +60,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_clang_format:
     release:
@@ -96,11 +96,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_cppcheck:
     release:
@@ -132,11 +132,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_export_dependencies:
     release:
@@ -144,11 +144,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_export_include_directories:
     release:
@@ -156,11 +156,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_export_interfaces:
     release:
@@ -168,11 +168,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_export_libraries:
     release:
@@ -180,11 +180,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_export_link_flags:
     release:
@@ -192,11 +192,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_flake8:
     release:
@@ -216,11 +216,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_gtest:
     release:
@@ -228,11 +228,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_include_directories:
     release:
@@ -240,11 +240,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_libraries:
     release:
@@ -252,11 +252,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_lint_cmake:
     release:
@@ -276,11 +276,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_pep257:
     release:
@@ -324,11 +324,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_ros:
     release:
@@ -348,11 +348,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_test:
     release:
@@ -360,11 +360,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_cmake-release.git
-      version: 0.0.2-0
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_cmake.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_cmake_uncrustify:
     release:
@@ -492,11 +492,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ament_package-release.git
-      version: 0.0.2-5
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ament/ament_package.git
-      version: master
+      version: release-beta3
     status: maintained
   ament_pep257:
     release:
@@ -1474,11 +1474,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ros_workspace-release.git
-      version: 0.0.2-6
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/nuclearsandwich/ros_workspace.git
-      version: master
+      version: release-beta3
     status: maintained
   rosidl_cmake:
     release:
