--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -624,11 +624,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/class_loader-release.git
-      version: 1.0.0-9
+      version: 1.0.0-10
     source:
       type: git
       url: https://github.com/ros/class_loader.git
-      version: master
+      version: 7d7bf4e0495e3599e37203697b7acb4ab193fa70
     status: maintained
   composition:
     release:
