Pin console_bridge.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -648,11 +648,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/console_bridge-release.git
-      version: 0.3.2-6
+      version: 0.3.2-7
     source:
       type: git
-      url: https://github.com/ros2/console_bridge.git
-      version: master
+      url: https://github.com/ros/console_bridge.git
+      version: 8c3c62501bf8521dcf53705b497ea982b874c25d
     status: maintained
   demo_nodes_cpp:
     release:
