--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -912,11 +912,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/fastcdr-release.git
-      version: 1.0.7-0
+      version: 1.0.7-1
     source:
       type: git
       url: https://github.com/eProsima/Fast-CDR.git
-      version: master
+      version: 0860e7c9054aae80d8d8c1cee6a1dd6ce3ae4f27
     status: maintained
   fastrtps:
     release:
