--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -924,11 +924,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/fastrtps-release.git
-      version: 1.5.0-4
+      version: 1.5.0-5
     source:
       type: git
       url: https://github.com/eProsima/Fast-RTPS.git
-      version: master
+      version: a3031901795bff023f4bece4623f6778fd09d3ec
     status: maintained
   fastrtps_cmake_module:
     release:
