--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -960,11 +960,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/googletest-release.git
-      version: 1.8.0-0
+      version: 1.8.0-1
     source:
       type: git
       url: https://github.com/ament/googletest.git
-      version: ros2
+      version: release-beta3
     status: maintained
   gtest_vendor:
     release:
@@ -972,11 +972,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/googletest-release.git
-      version: 1.8.0-0
+      version: 1.8.0-1
     source:
       type: git
       url: https://github.com/ament/googletest.git
-      version: ros2
+      version: release-beta3
     status: maintained
   image_geometry:
     release:
