Pin orocos_kdl.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1128,11 +1128,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/orocos_kinematics_dynamics-release.git
-      version: 1.4.0-4
+      version: 1.4.0-5
     source:
       type: git
       url: https://github.com/ros2/orocos_kinematics_dynamics.git
-      version: ros2
+      version: release-beta3
     status: maintained
   osrf_pycommon:
     release:
