--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1140,11 +1140,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/osrf_pycommon-release.git
-      version: 0.1.3-4
+      version: 0.1.3-5
     source:
       type: git
       url: https://github.com/osrf/osrf_pycommon.git
-      version: master
+      version: 3ef6d6a88d04bd661f6c4f33604e726969d7bf0a
     status: maintained
   pcl_conversions:
     release:
