Rev realtime_support.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1152,11 +1152,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/pcl_conversions-release.git
-      version: 0.2.1-2
+      version: 0.2.1-3
     source:
       type: git
       url: https://github.com/ros2/pcl_conversions.git
-      version: ros2
+      version: release-beta3
     status: maintained
   pendulum_control:
     release:
@@ -1666,11 +1666,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/realtime_support-release.git
-      version: 0.0.1-3
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/realtime_support.git
-      version: master
+      version: release-beta3
     status: maintained
   sensor_msgs:
     release:
@@ -1870,11 +1870,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/realtime_support-release.git
-      version: 0.0.1-3
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/realtime_support.git
-      version: master
+      version: release-beta3
     status: maintained
   topic_monitor:
     release:
