--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1032,11 +1032,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/robot_model-release.git
-      version: 1.12.7-7
+      version: 1.12.7-8
     source:
       type: git
       url: https://github.com/ros2/robot_model.git
-      version: ros2
+      version: release-beta3
     status: maintained
   launch:
     release:
@@ -1978,11 +1978,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/robot_model-release.git
-      version: 1.12.7-7
+      version: 1.12.7-8
     source:
       type: git
       url: https://github.com/ros2/robot_model.git
-      version: ros2
+      version: release-beta3
     status: maintained
   urdfdom:
     release:
