--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -564,11 +564,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/ros_astra_camera-release.git
-      version: 0.2.0-7
+      version: 0.2.0-8
     source:
       type: git
       url: https://github.com/ros2/ros_astra_camera.git
-      version: ros2
+      version: release-beta3
     status: maintained
   builtin_interfaces:
     release:
@@ -1354,11 +1354,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/robot_state_publisher-release.git
-      version: 1.13.4-3
+      version: 1.13.4-4
     source:
       type: git
       url: https://github.com/ros2/robot_state_publisher.git
-      version: ros2
+      version: release-beta3
     status: maintained
   ros1_bridge:
     release:
@@ -1750,11 +1750,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/teleop_twist_joy-release.git
-      version: 0.1.2-3
+      version: 0.1.2-4
     source:
       type: git
       url: https://github.com/ros2/teleop_twist_joy.git
-      version: ros2
+      version: release-beta3
     status: maintained
   teleop_twist_keyboard:
     release:
