--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1762,11 +1762,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/teleop_twist_keyboard-release.git
-      version: 0.6.0-3
+      version: 0.6.0-4
     source:
       type: git
       url: https://github.com/ros2/teleop_twist_keyboard.git
-      version: ros2
+      version: release-beta3
     status: maintained
   test_msgs:
     release:
