--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1966,11 +1966,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/uncrustify-release
-      version: 0.61.20150413-4
+      version: 0.61.20150413-5
     source:
       type: git/
       url: https://github.com/ament/uncrustify.git
-      version: master
+      version: release-beta3
     status: maintained
   urdf:
     release:
