--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1990,11 +1990,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/urdfdom-release.git
-      version: 0.3.0-6
+      version: 0.3.0-7
     source:
       type: git
       url: https://github.com/ros2/urdfdom.git
-      version: ros2
+      version: release-beta3
     status: maintained
   urdfdom_headers:
     release:
@@ -2002,11 +2002,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/urdfdom_headers-release.git
-      version: 1.0.0-1
+      version: 1.0.0-2
     source:
       type: git
       url: https://github.com/ros2/urdfdom_headers.git
-      version: master
+      version: release-beta3
     status: maintained
   visualization_msgs:
     release:
