Rev vision_opencv.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -984,11 +984,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/vision_opencv-release.git
-      version: 1.12.4-2
+      version: 1.12.4-3
     source:
       type: git
       url: https://github.com/ros2/vision_opencv.git
-      version: ros2
+      version: release-beta3
     status: maintained
   image_tools:
     release:
