--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1024,7 +1024,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/joystick_drivers.git
-      version: ros2
+      version: release-beta3
     status: maintained
   kdl_parser:
     release:
