--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -588,11 +588,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/cartographer-release.git
-      version: 0.1.0-4
+      version: 0.1.0-5
     source:
       type: git
       url: https://github.com/ros2/cartographer.git
-      version: ros2
+      version: release-beta3
     status: maintained
   cartographer_ros:
     release:
