Rev cartographer_ros.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -600,11 +600,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/cartographer_ros-release.git
-      version: 0.1.0-5
+      version: 0.1.0-6
     source:
       type: git
       url: https://github.com/ros2/cartographer_ros.git
-      version: ros2
+      version: release-beta3
     status: maintained
   cartographer_ros_msgs:
     release:
@@ -612,11 +612,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/cartographer_ros-release.git
-      version: 0.1.0-5
+      version: 0.1.0-6
     source:
       type: git
       url: https://github.com/ros2/cartographer_ros.git
-      version: ros2
+      version: release-beta3
     status: maintained
   class_loader:
     release:
