--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1786,11 +1786,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/geometry2-release.git
-      version: 0.5.15-7
+      version: 0.5.15-8
     source:
       type: git
       url: https://github.com/ros2/geometry2.git
-      version: ros2
+      version: release-beta3
     status: maintained
   tf2_eigen:
     release:
@@ -1798,11 +1798,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/geometry2-release.git
-      version: 0.5.15-7
+      version: 0.5.15-8
     source:
       type: git
       url: https://github.com/ros2/geometry2.git
-      version: ros2
+      version: release-beta3
     status: maintained
   tf2_geometry_msgs:
     release:
@@ -1810,11 +1810,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/geometry2-release.git
-      version: 0.5.15-7
+      version: 0.5.15-8
     source:
       type: git
       url: https://github.com/ros2/geometry2.git
-      version: ros2
+      version: release-beta3
     status: maintained
   tf2_msgs:
     release:
@@ -1822,11 +1822,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/geometry2-release.git
-      version: 0.5.15-7
+      version: 0.5.15-8
     source:
       type: git
       url: https://github.com/ros2/geometry2.git
-      version: ros2
+      version: release-beta3
     status: maintained
   tf2_ros:
     release:
@@ -1834,11 +1834,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/geometry2-release.git
-      version: 0.5.15-7
+      version: 0.5.15-8
     source:
       type: git
       url: https://github.com/ros2/geometry2.git
-      version: ros2
+      version: release-beta3
     status: maintained
   tinyxml_vendor:
     release:
