--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -28,7 +28,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/navigation.git
-      version: ros2
+      version: release-beta3
     status: maintained
   ament_clang_format:
     release:
@@ -1096,7 +1096,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/navigation.git
-      version: ros2
+      version: release-beta3
     status: maintained
   nav_msgs:
     release:
