--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -696,11 +696,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/depthimage_to_laserscan-release.git
-      version: 1.0.7-3
+      version: 1.0.7-4
     source:
       type: git
       url: https://github.com/ros2/depthimage_to_laserscan.git
-      version: ros2
+      version: release-beta3
     status: maintained
   depthimage_to_pointcloud2:
     release:
