Rev turtlebot2_demo.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -708,11 +708,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/turtlebot2_demo.git
-      version: master
+      version: release-beta3
     status: maintained
   diagnostic_msgs:
     release:
@@ -1906,11 +1906,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/turtlebot2_demo.git
-      version: master
+      version: release-beta3
     status: maintained
   turtlebot2_cartographer:
     release:
@@ -1918,11 +1918,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/turtlebot2_demo.git
-      version: master
+      version: release-beta3
     status: maintained
   turtlebot2_drivers:
     release:
@@ -1930,11 +1930,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/turtlebot2_demo.git
-      version: master
+      version: release-beta3
     status: maintained
   turtlebot2_follower:
     release:
@@ -1942,11 +1942,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/turtlebot2_demo.git
-      version: master
+      version: release-beta3
     status: maintained
   turtlebot2_teleop:
     release:
@@ -1954,11 +1954,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/turtlebot2_demo-release.git
-      version: 0.0.2-1
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/turtlebot2_demo.git
-      version: master
+      version: release-beta3
     status: maintained
   uncrustify:
     release:
