--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -636,11 +636,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   console_bridge:
     release:
@@ -660,11 +660,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   demo_nodes_cpp_native:
     release:
@@ -672,11 +672,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   demo_nodes_py:
     release:
@@ -684,11 +684,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   depthimage_to_laserscan:
     release:
@@ -732,11 +732,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   dummy_robot_bringup:
     release:
@@ -744,11 +744,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   dummy_sensors:
     release:
@@ -756,11 +756,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   example_interfaces:
     release:
@@ -996,11 +996,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   intra_process_demo:
     release:
@@ -1008,11 +1008,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   joy:
     release:
@@ -1068,11 +1068,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   lifecycle_msgs:
     release:
@@ -1164,11 +1164,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   pendulum_msgs:
     release:
@@ -1176,11 +1176,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   poco_vendor:
     release:
@@ -1882,11 +1882,11 @@ repositories:
         release: release/r2b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/demos-release.git
-      version: 0.0.2-2
+      version: 0.0.3-0
     source:
       type: git
       url: https://github.com/ros2/demos.git
-      version: master
+      version: release-beta3
     status: maintained
   trajectory_msgs:
     release:
