strands_executive: 1.0.9-0 in 'indigo/lcas-dist.yaml' [bloom]

--- a/indigo/lcas-dist.yaml
+++ b/indigo/lcas-dist.yaml
@@ -183,6 +183,27 @@ repositories:
       url: https://github.com/LCAS/sandbox.git
       version: master
     status: developed
+  strands_executive:
+    release:
+      packages:
+      - gcal_routine
+      - mdp_plan_exec
+      - scheduler
+      - scipoptsuite
+      - sim_clock
+      - strands_executive_msgs
+      - task_executor
+      - wait_action
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/strands-project-releases/strands_executive.git
+      version: 1.0.9-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/strands-project/strands_executive.git
+      version: indigo-devel
+    status: developed
   thin_navigation:
     release:
       tags:
