--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8940,6 +8940,12 @@ repositories:
       url: https://github.com/ros-teleop/teleop_twist_keyboard.git
       version: master
     status: maintained
+  teraranger:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: git@github.com:Terabee/teraranger-release.git
+      version: 1.0.0-1
   tf2_web_republisher:
     doc:
       type: git
