--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8944,7 +8944,7 @@ repositories:
     release:
       tags:
         release: release/kinetic/{package}/{version}
-      url: git@github.com:Terabee/teraranger-release.git
+      url: https://github.com/Terabee/teraranger-release.git
       version: 1.0.0-1
   tf2_web_republisher:
     doc:
