--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -6899,13 +6899,14 @@ repositories:
   mongodb_store:
     release:
       packages:
+      - libmongocxx_ros
       - mongodb_log
       - mongodb_store
       - mongodb_store_msgs
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/strands-project-releases/mongodb_store.git
-      version: 0.1.30-1
+      version: 0.3.6-1
     source:
       type: git
       url: https://github.com/strands-project/mongodb_store.git
