--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4271,6 +4271,22 @@ repositories:
       url: https://bitbucket.org/dataspeedinc/mobility_base_simulator
       version: default
     status: developed
+  mongodb_store:
+    release:
+      packages:
+      - libmongocxx_ros
+      - mongodb_log
+      - mongodb_store
+      - mongodb_store_msgs
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/strands-project-releases/mongodb_store.git
+      version: 0.3.6-0
+    source:
+      type: git
+      url: https://github.com/strands-project/mongodb_store.git
+      version: kinetic-devel
+    status: developed
   motoman:
     doc:
       type: git
