--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -5190,6 +5190,24 @@ repositories:
       url: https://github.com/JenniferBuehler/general-message-pkgs.git
       version: master
     status: maintained
+  joint_state_publisher:
+    doc:
+      type: git
+      url: https://github.com/ros/joint_state_publisher.git
+      version: indigo-devel
+    release:
+      packages:
+      - joint_state_publisher
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ros-gbp/joint_state_publisher-release.git
+      version: 1.11.15-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/joint_state_publisher.git
+      version: indigo-devel
+    status: maintained
   joystick_drivers:
     doc:
       type: git
@@ -10761,7 +10779,6 @@ repositories:
       version: indigo-devel
     release:
       packages:
-      - joint_state_publisher
       - robot_model
       - urdf
       - urdf_parser_plugin
