--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1043,7 +1043,7 @@ repositories:
       version: kinetic-devel
     release:
       tags:
-        release: release/kinetic/{package}/{version}
+        release: release/lunar/{package}/{version}
       url: https://github.com/ros-gbp/joint_state_publisher-release.git
       version: 1.12.12-0
     source:
