Change robot_model to jade-devel tag

--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -5280,7 +5280,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/robot_model.git
-      version: indigo-devel
+      version: jade-devel
     release:
       packages:
       - joint_state_publisher
@@ -5295,7 +5295,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/robot_model.git
-      version: indigo-devel
+      version: jade-devel
     status: maintained
   robot_pose_publisher:
     doc:
