--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1036,6 +1036,22 @@ repositories:
       url: https://github.com/ros/ivcon.git
       version: kinetic-devel
     status: maintained
+  joint_state_publisher:
+    doc:
+      type: git
+      url: https://github.com/ros/joint_state_publisher.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/joint_state_publisher-release.git
+      version: 1.12.12-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/joint_state_publisher.git
+      version: kinetic-devel
+    status: maintained
   joystick_drivers:
     doc:
       type: git
@@ -2213,7 +2229,6 @@ repositories:
       version: kinetic-devel
     release:
       packages:
-      - joint_state_publisher
       - robot_model
       - urdf
       - urdf_parser_plugin
