teraranger-array-converter: 1.0.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9010,6 +9010,14 @@ repositories:
         release: release/kinetic/{package}/{version}
       url: https://github.com/Terabee/teraranger-release.git
       version: 1.0.0-1
+  teraranger-array-converter:
+    release:
+      packages:
+      - teraranger_array_converter
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/Terabee/teraranger_array_converter-release.git
+      version: 1.0.0-0
   tf2_web_republisher:
     doc:
       type: git
