--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9010,7 +9010,7 @@ repositories:
         release: release/kinetic/{package}/{version}
       url: https://github.com/Terabee/teraranger-release.git
       version: 1.0.0-1
-  teraranger-array:
+  teraranger_array:
     release:
       packages:
       - teraranger_array
