--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -73,6 +73,11 @@ repositories:
       version: master
     status: developed
   iliad_smp:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://gitsvn-nt.oru.se/iliad/software/iliad_smp_releases.git
+      version: 0.0.1-0
     source:
       test_pull_requests: true
       type: git
