teraranger-array: 1.0.0-0 in 'kinetic/distribution.yaml' [bloom] (#15940)
* teraranger-array: 1.0.0-0 in 'kinetic/distribution.yaml' [bloom]

* Update distribution.yaml

* Update distribution.yaml

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9010,6 +9010,12 @@ repositories:
         release: release/kinetic/{package}/{version}
       url: https://github.com/Terabee/teraranger-release.git
       version: 1.0.0-1
+  teraranger_array:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/Terabee/teraranger_array-release.git
+      version: 1.0.0-0
   tf2_web_republisher:
     doc:
       type: git
