iliad_smp: 0.0.1-0 in 'kinetic/lcas-dist.yaml' [bloom]

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -76,7 +76,7 @@ repositories:
     release:
       tags:
         release: release/kinetic/{package}/{version}
-      url: https://gitsvn-nt.oru.se/iliad/software/iliad_smp_releases.git
+      url: https://github.com/LCAS/restricted-releases.git
       version: 0.0.1-0
     source:
       test_pull_requests: true
