--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -203,7 +203,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/tstoyanov/perception_oru-private.git
-      version: kinetic
+      version: port-kinetic
     status: developed
   robomongo_ros:
     source:
@@ -670,7 +670,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/OrebroUniversity/velodyne.git
-      version: kinetic
+      version: master
     status: maintained
   whycon:
     source:
