--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -666,6 +666,16 @@ repositories:
       version: master
     status: developed
   velodyne:
+    release:
+      packages:
+      - velodyne
+      - velodyne_driver
+      - velodyne_msgs
+      - velodyne_pointcloud
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/LCAS/velodyne-release.git
+      version: 1.2.1-0
     source:
       test_pull_requests: true
       type: git
