teraranger-description: 1.0.0-0 in 'kinetic/distribution.yaml' [bloom] (#15944)
* teraranger-description: 1.0.0-0 in 'kinetic/distribution.yaml' [bloom]

* Update distribution.yaml

* Update distribution.yaml

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9022,6 +9022,12 @@ repositories:
         release: release/kinetic/{package}/{version}
       url: https://github.com/Terabee/teraranger_array_converter-release.git
       version: 1.0.0-0
+  teraranger_description:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/Terabee/teraranger_description-release.git
+      version: 1.0.0-0
   tf2_web_republisher:
     doc:
       type: git
