--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,7 @@ notifications:
 
 branches:
   only:
-    - master
+    - master 
+
+before_install: 
+  - openssl aes-256-cbc -K $encrypted_ff7a3197787f_key -iv $encrypted_ff7a3197787f_iv -in .git-credentials.enc -out .git-credentials -d
