pheeno_ros: 0.1.1-4 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -8974,6 +8974,12 @@ repositories:
       url: https://github.com/RobotnikAutomation/phantomx_reactor_arm.git
       version: indigo-devel
     status: maintained
+  pheeno_ros:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ACSLaboratory/pheeno_ros-release.git
+      version: 0.1.1-4
   phidgets_drivers:
     doc:
       type: git
