--- a/rosdep/lcas.yaml
+++ b/rosdep/lcas.yaml
@@ -26,6 +26,9 @@ igraph:
 jekyll-trusty:
   ubuntu:
     trusty: [jekyll]
+kvaser-libcan:
+  ubuntu:
+    xenial: [kvaser-libcan]
 libsvm:
   ubuntu: [libsvm-dev]
 mira-scitos:
