--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4265,6 +4265,28 @@ repositories:
       url: https://github.com/ros-drivers/microstrain_3dmgx2_imu.git
       version: indigo-devel
     status: maintained
+  minas:
+    doc:
+      type: git
+      url: https://github.com/tork-a/minas.git
+      version: master
+    release:
+      packages:
+      - ethercat_manager
+      - minas
+      - minas_control
+      - tra1_bringup
+      - tra1_description
+      - tra1_moveit_config
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/minas-release.git
+      version: 1.0.6-0
+    source:
+      type: git
+      url: https://github.com/tork-a/minas.git
+      version: master
+    status: developed
   mobility_base_ros:
     doc:
       type: hg
