coordination_oru: 0.1.1-0 in 'kinetic/lcas-dist.yaml' [bloom]

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -29,6 +29,14 @@ repositories:
       url: https://github.com/LCAS/bayestracking.git
       version: master
     status: developed
+  coordination_oru:
+    release:
+      packages:
+      - coordination_oru_ros
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/iliad-project/coordination_oru-release.git
+      version: 0.1.1-0
   coordination_oru_ros:
     source:
       type: git
