kinetic pull-request testing activated for costmap_converter

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1345,6 +1345,7 @@ repositories:
       url: https://github.com/rst-tu-dortmund/costmap_converter-release.git
       version: 0.0.7-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/rst-tu-dortmund/costmap_converter.git
       version: master
