--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1343,8 +1343,9 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/rst-tu-dortmund/costmap_converter-release.git
-      version: 0.0.6-0
+      version: 0.0.7-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/rst-tu-dortmund/costmap_converter.git
       version: master
