--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -94,6 +94,13 @@ repositories:
       url: https://gitsvn-nt.oru.se/iliad/software/iliad_smp.git
       version: master
     status: developed
+  kmo_interfaces:
+    source:
+      test_pull_requests: false
+      type: git
+      url: https://gitsvn-nt.oru.se/marc-hanheide/kmo_interfaces.git
+      version: master
+    status: developed
   lcas_teaching:
     release:
       packages:
