enable pull request testing for teb_local_planner (kinetic)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8957,6 +8957,7 @@ repositories:
       url: https://github.com/rst-tu-dortmund/teb_local_planner-release.git
       version: 0.6.7-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/rst-tu-dortmund/teb_local_planner.git
       version: kinetic-devel
