--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -75,6 +75,12 @@ repositories:
       url: https://gitsvn-nt.oru.se/iliad/software/iliad_metapackage.git
       version: master
     status: developed
+  iliad_human_perception:
+    source:
+      type: git
+      url: https://gitsvn-nt.oru.se/iliad/software/iliad_human_perception.git
+      version: master
+    status: developed
   iliad_sandbox:
     source:
       test_pull_requests: true
