--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -101,6 +101,16 @@ repositories:
       version: master
     status: developed
   kmo_interfaces:
+    release:
+      packages:
+      - kmo_cpi_interface
+      - kmo_fork_control
+      - kmo_navserver
+      - sick_s3x
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/iliad-project/kmo_interfaces-release.git
+      version: 0.0.1-0
     source:
       test_pull_requests: false
       type: git
