changed smp path

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -97,7 +97,7 @@ repositories:
     source:
       test_pull_requests: true
       type: git
-      url: https://gitsvn-nt.oru.se/iliad/software/iliad_smp.git
+      url: https://gitsvn-nt.oru.se/palmieri/iliad_smp.git
       version: master
     status: developed
   kmo_interfaces:
