iliad_human_perception release

--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -76,6 +76,13 @@ repositories:
       version: master
     status: developed
   iliad_human_perception:
+    release:
+      packages:
+      - iliad_human_perception_launch
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://gitsvn-nt.oru.se/iliad/software/iliad_human_perception_release.git
+      version: 1.0.1-0
     source:
       type: git
       url: https://gitsvn-nt.oru.se/iliad/software/iliad_human_perception.git
