wts_driver: 1.0.4-2 in 'lunar/distribution.yaml' [bloom]

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -3664,6 +3664,13 @@ repositories:
       url: https://github.com/ros-visualization/webkit_dependency.git
       version: kinetic-devel
     status: maintained
+  wts_driver:
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ksatyaki/wts_driver-release.git
+      version: 1.0.4-2
+    status: maintained
   xacro:
     doc:
       type: git
