--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8955,8 +8955,9 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/rst-tu-dortmund/teb_local_planner-release.git
-      version: 0.6.6-0
+      version: 0.6.7-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/rst-tu-dortmund/teb_local_planner.git
       version: kinetic-devel
