--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -5491,7 +5491,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-industrial/ros_canopen.git
-      version: jade-devel
+      version: jade
     status: maintained
   ros_comm:
     doc:
