--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2323,7 +2323,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-industrial/ros_canopen.git
-      version: jade-devel
+      version: kinetic
     release:
       packages:
       - can_msgs
@@ -2341,7 +2341,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-industrial/ros_canopen.git
-      version: jade-devel
+      version: kinetic-devel
     status: maintained
   ros_comm:
     doc:
