--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -3495,6 +3495,21 @@ repositories:
       url: https://github.com/rst-tu-dortmund/teb_local_planner.git
       version: lunar-devel
     status: developed
+  teb_local_planner_tutorials:
+    doc:
+      type: git
+      url: https://github.com/rst-tu-dortmund/teb_local_planner_tutorials.git
+      version: lunar-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/rst-tu-dortmund/teb_local_planner_tutorials-release.git
+      version: 0.2.1-0
+    source:
+      type: git
+      url: https://github.com/rst-tu-dortmund/teb_local_planner_tutorials.git
+      version: lunar-devel
+    status: developed
   unique_identifier:
     doc:
       type: git
