lkh: 0.1.1-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3805,6 +3805,21 @@ repositories:
       url: https://github.com/ros-drivers/linux_peripheral_interfaces.git
       version: kinetic
     status: maintained
+  lkh:
+    release:
+      packages:
+      - glkh_solver
+      - lkh
+      - lkh_solver
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/crigroup/lkh-release.git
+      version: 0.1.1-0
+    source:
+      type: git
+      url: https://github.com/crigroup/lkh.git
+      version: 0.1.0
+    status: developed
   lms1xx:
     doc:
       type: git
