Fix source version

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3818,7 +3818,7 @@ repositories:
     source:
       type: git
       url: https://github.com/crigroup/lkh.git
-      version: 0.1.0
+      version: master
     status: developed
   lms1xx:
     doc:
