Add doc generation

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3806,6 +3806,10 @@ repositories:
       version: kinetic
     status: maintained
   lkh:
+    doc:
+      type: git
+      url: https://github.com/crigroup/lkh.git
+      version: master
     release:
       packages:
       - glkh_solver
