Adding hebiros to documentation index for distro (#15959)
* Adding hebiros to documentation index for distro

* Removed release, adding hebiros to documentation index for distro

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2574,6 +2574,12 @@ repositories:
       url: https://github.com/davidfischinger/haf_grasping.git
       version: kinetic
     status: maintained
+  hebiros:
+    doc:
+      type: git
+      url: https://github.com/HebiRobotics/HEBI-ROS.git
+      version: master
+    status: maintained
   hector_gazebo:
     doc:
       type: git
