--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5777,6 +5777,16 @@ repositories:
       url: https://github.com/ros-perception/perception_pcl.git
       version: kinetic-devel
     status: maintained
+  pheeno_ros:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ACSLaboratory/pheeno_ros-release.git
+      version: 0.1.1-1
+    source:
+      type: git
+      url: https://github.com/ACSLaboratory/pheeno_ros.git
+      version: 0.1.1
   phidgets_drivers:
     doc:
       type: git
