Adding pheeno_ros to documentation index for indigo and kinetic as well as src info for indigo

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -8975,11 +8975,19 @@ repositories:
       version: indigo-devel
     status: maintained
   pheeno_ros:
+    doc:
+      type: git
+      url: https://github.com/ACSLaboratory/pheeno_ros.git
+      version: indigo-devel
     release:
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ACSLaboratory/pheeno_ros-release.git
       version: 0.1.1-4
+    source:
+      type: git
+      url: https://github.com/ACSLaboratory/pheeno_ros.git
+      version: indigo-devel
   phidgets_drivers:
     doc:
       type: git
