--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5778,6 +5778,10 @@ repositories:
       version: kinetic-devel
     status: maintained
   pheeno_ros:
+    doc:
+      type: git
+      url: https://github.com/ACSLaboratory/pheeno_ros.git
+      version: kinetic-devel
     release:
       tags:
         release: release/kinetic/{package}/{version}
