--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2952,6 +2952,7 @@ liburdfdom-tools:
   debian: [liburdfdom-tools]
   fedora: [urdfdom]
   gentoo: [dev-libs/urdfdom]
+  slackware: [urdfdom]
   ubuntu: [liburdfdom-tools]
 libusb:
   arch: [libusb-compat]
@@ -3306,7 +3307,7 @@ log4cxx:
   macports: [ros-log4cxx]
   opensuse: [liblog4cxx-devel]
   rhel: [log4cxx-devel]
-  slackware: [log4cxx]
+  slackware: [apache-log4cxx]
   ubuntu: [liblog4cxx10-dev]
 lttng-modules:
   arch: [lttng-modules]
