--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -240,6 +240,21 @@ repositories:
       url: https://github.com/davetcoleman/cartesian_msgs.git
       version: jade-devel
     status: maintained
+  cartographer:
+    doc:
+      type: git
+      url: https://github.com/googlecartographer/cartographer.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/cartographer-release.git
+      version: 0.2.0-0
+    source:
+      type: git
+      url: https://github.com/googlecartographer/cartographer.git
+      version: master
+    status: developed
   catkin:
     doc:
       type: git
