--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -251,6 +251,7 @@ repositories:
       url: https://github.com/ros-gbp/cartographer-release.git
       version: 0.2.0-0
     source:
+      test_commits: false
       type: git
       url: https://github.com/googlecartographer/cartographer.git
       version: master
