pheeno_ros_sim: 0.1.1-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -8989,6 +8989,20 @@ repositories:
       type: git
       url: https://github.com/ACSLaboratory/pheeno_ros.git
       version: indigo-devel
+  pheeno_ros_sim:
+    doc:
+      type: git
+      url: https://github.com/ACSLaboratory/pheeno_ros_sim.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ACSLaboratory/pheeno_ros_sim-release.git
+      version: 0.1.1-0
+    source:
+      type: git
+      url: https://github.com/ACSLaboratory/pheeno_ros_sim.git
+      version: indigo-devel
   phidgets_drivers:
     doc:
       type: git
