add python-bloom to debian jessie by collapsing debian rules

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -400,9 +400,7 @@ python-blinker:
   gentoo: [dev-python/blinker]
   ubuntu: [python-blinker]
 python-bloom:
-  debian:
-    buster: [python-bloom]
-    stretch: [python-bloom]
+  debian: [python-bloom]
   fedora: [python-bloom]
   gentoo: [dev-python/bloom]
   ubuntu:
