add python-rosinstall for additional ubuntu distros (#15990)
* add python-rosinstall for additional ubuntu distros

* add python-rosinstall to debian jessie by collapsing debian rules

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2692,13 +2692,12 @@ python-rosdistro:
     trusty_python3: [python3-rosdistro]
 python-rosinstall:
   arch: [python2-rosinstall]
-  debian:
-    buster: [python-rosinstall]
-    stretch: [python-rosinstall]
+  debian: [python-rosinstall]
   fedora: [python-rosinstall]
   gentoo: [dev-python/rosinstall]
   macports: [p27-rosinstall]
   ubuntu:
+    artful: [python-rosinstall]
     lucid: [python-rosinstall]
     maverick: [python-rosinstall]
     natty: [python-rosinstall]
@@ -2709,6 +2708,12 @@ python-rosinstall:
     saucy: [python-rosinstall]
     trusty: [python-rosinstall]
     trusty_python3: [python3-rosinstall]
+    utopic: [python-rosinstall]
+    vivid: [python-rosinstall]
+    wily: [python-rosinstall]
+    xenial: [python-rosinstall]
+    yakkety: [python-rosinstall]
+    zesty: [python-rosinstall]
 python-rosinstall-generator:
   arch: [python2-rosinstall-generator]
   debian:
