Add fanuc_post_processor package

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1998,6 +1998,12 @@ repositories:
       url: https://github.com/ros-industrial/fanuc_experimental.git
       version: indigo-devel
     status: developed
+  fanuc_post_processor:
+    doc:
+      type: git
+      url: https://gitlab.com/InstitutMaupertuis/fanuc_post_processor.git
+      version: kinetic
+    status: developed
   fawkes_msgs:
     doc:
       type: git
