--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1463,6 +1463,19 @@ python-lttngust:
   ubuntu:
     pip:
       packages: [python-lttngust]
+python-luis-pip:
+  debian:
+    pip:
+      packages: [luis]
+  fedora:
+    pip:
+      packages: [luis]
+  osx:
+    pip:
+      packages: [luis]
+  ubuntu:
+    pip:
+      packages: [luis]
 python-lxml:
   arch: [python2-lxml]
   debian: [python-lxml]
