--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2693,6 +2693,7 @@ python-rosdistro:
     pip:
       packages: [rosdistro]
   ubuntu:
+    artful: [python-rosdistro]
     lucid: [python-rosdistro]
     maverick: [python-rosdistro]
     natty: [python-rosdistro]
