Adding gd_msgs to documentation index for kinetic distro

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2279,6 +2279,16 @@ repositories:
       url: https://github.com/CogRob/gcloud_speech.git
       version: master
     status: developed
+  gd_msgs:
+    doc:
+      type: git
+      url: https://github.com/robosavvy/gd_msgs.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/robosavvy/gd_msgs.git
+      version: master
+    status: maintained
   gencpp:
     doc:
       type: git
