--- a/rosdep/lcas.yaml
+++ b/rosdep/lcas.yaml
@@ -1,5 +1,8 @@
 coinor-solvers:
   ubuntu: [coinor-libcbc-dev, coinor-libclp-dev, coinor-libcoinutils-dev, coinor-libcgl-dev, coinor-libosi-dev]
+cvb:
+  ubuntu:
+    xenial: [cvb-camerasuite-dev]
 deepfried2:
   ubuntu: [python-deepfried2]
 gazebo8:
