youbot_description: 0.8.1-0 in 'jade/distribution.yaml' [bloom]

--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -8076,6 +8076,20 @@ repositories:
       url: https://github.com/ethz-asl/ethzasl_xsens_driver.git
       version: master
     status: maintained
+  youbot_description:
+    doc:
+      type: git
+      url: https://github.com/youbot/youbot_description.git
+      version: jade-devel
+    release:
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/youbot-release/youbot_description-release.git
+      version: 0.8.1-0
+    source:
+      type: git
+      url: https://github.com/youbot/youbot_description.git
+      version: jade-devel
   youbot_driver:
     release:
       tags:
